<resources>
    <string name="app_name">Style Omega</string>
    <string name="reg">Register</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="mycart">My Cart</string>
    <string name="history">History</string>
    <string name="help">Contact Us</string>
    <string name="signout">Logout</string>
    <string name="profile">View Profile</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="menu_nav">burger</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="kids">Kids</string>
    <string name="bill">Your Bill</string>
    <string name="price">Rs.</string>
    <string name="search_hint">Search Item</string>
    <string name="search_title">Search</string>
    <string name="delete">Remove Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeF">iffath.home.fragment</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="add_cart">Add to Cart</string>
</resources>
