<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/home"
            android:title="@string/home"
            android:checked="true"/>

        <item
            android:id="@+id/nav_editprofile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_viewCart"
            android:icon="@drawable/viewcart"
            android:title="@string/mycart" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/history" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/help"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/signout"
                android:title="@string/signout"/>
        </menu>
    </item>
</menu>